feat(commands): Add pagination and --gui flag to /history command
- Add WorldGuard-style pagination with clickable navigation buttons
- Add --gui/-g flag to open PlayerHistoryGui instead of chat output
- Add support for ipbans, ipmutes, and ip type filters
- Add clickable punishment entries with hover details
- Improve display with box-drawing characters
- Support flexible argument order (type and page can be in any position)